--- a/src/app/match/mach-page/mach-page.component.html
+++ b/src/app/match/mach-page/mach-page.component.html
@@ -1,4 +1,142 @@
 <p>mach-page works!</p>
+
+<div class='tactic'>
+    <div class='home'>
+
+        <div class='gk'>
+            <span class='gk'>
+                gk
+            </span>
+        </div>
+        <div class='defender'>
+            <span class='defender'>
+                df
+            </span>
+            <span class='defender'>
+                df
+            </span>
+            <span class='defender'>
+                df
+            </span>
+
+        </div>
+        <div class='defensive-midfilders'>
+            <span>
+                mid
+            </span>
+            <span>
+                mid
+            </span>
+
+        </div>
+
+        <div class='midfilders'>
+
+
+            <span>
+                mid
+            </span>
+            <span>
+                mid
+            </span>
+            <span>
+                mid
+            </span>
+
+
+        </div>
+
+        <div class='attacking-midfilders'>
+            <span>
+                at
+            </span>
+
+        </div>
+
+
+        <div class='attackers'>
+
+            <span>
+                cf
+            </span>
+
+
+        </div>
+
+    </div>
+
+    <div class="away">
+        <div class='gk'>
+            <span class='gk'>
+                gk
+            </span>
+        </div>
+        <div class='defender'>
+            <span class='defender'>
+                df
+            </span>
+            <span class='defender'>
+                df
+            </span>
+            <span class='defender'>
+                df
+            </span>
+
+        </div>
+        <div class='defensive-midfilders'>
+            <span>
+                mid
+            </span>
+            <span>
+                mid
+            </span>
+
+        </div>
+
+        <div class='midfilders'>
+
+
+            <span>
+                mid
+            </span>
+            <span>
+                mid
+            </span>
+
+
+
+        </div>
+
+        <div class='attacking-midfilders'>
+            <span>
+                am
+            </span>
+            <span>
+                am
+            </span>
+
+        </div>
+
+
+        <div class='attackers'>
+
+            <span class='defender'>
+                df
+            </span>
+
+
+        </div>
+
+
+
+
+
+    </div>
+    <img src='../../../assets/pngguru.com.png'>
+</div>
+
+
+
 <hr>
 
 <div class='stats'>
