--- a/src/app/match/mach-page/bar-chart/bar-chart.component.html
+++ b/src/app/match/mach-page/bar-chart/bar-chart.component.html
@@ -1,1 +1,15 @@
-<p>bar-chart works!</p>
+<ngx-charts-bar-horizontal-stacked [xAxisTickFormatting]="format" [schemeType]="'ordinal'" [view]="view"
+    [trimXAxisTicks]="showYAxis" [scheme]="colorScheme" [results]="statistics" [xAxis]="true" [yAxis]="showYAxis"
+    [legend]="showLegend" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel">
+
+    <ng-template #tooltipTemplate let-model="model">
+        <div class='toolText'>
+            <h6>
+                {{ model.statType}}&bull;{{model.name}}
+            </h6>
+            <h6>{{model.normalValue}}</h6>
+        </div>
+    </ng-template>
+</ngx-charts-bar-horizontal-stacked>
+
+\
