--- a/src/app/match/mach-page/tactic-board/tactic-board.component.html
+++ b/src/app/match/mach-page/tactic-board/tactic-board.component.html
@@ -20,7 +20,7 @@
 <div class="away">
 
     <div *ngFor='let unit of away; let i = index'>
-        <span *ngFor='let player of unit'>
+        <span class='awayTeam' *ngFor='let player of unit'>
             {{player.lineup_number}}
 
         </span>
