--- a/src/app/match/mach-page/mach-page.component.html
+++ b/src/app/match/mach-page/mach-page.component.html
@@ -1,93 +1,31 @@
-<!-- <p>mach-page works!</p>
+<div class='head'>
+    <div class="homeSide">
+        <h2>Home</h2> <img [src]="lineups.home.badge" alt="">
+        <h3> Team: {{lineups.home.team}}</h3>
 
-<div class='tactic'>
-    <div class='home'>
+        <h4>
+            Coach:{{lineups.home.coach[0].lineup_player}} </h4>
+    </div>
+    <br>
+    <div class="awaySide">
+        <h2>Away</h2><img [src]="lineups.away.badge" alt="">
+        <h3> Team:{{lineups.away.team}}</h3>
 
-
-
-        <div class='defender' *ngFor='let unit of lineups.home.lineup'>
-
-
-            <span class='defender' *ngFor='let player of unit'>
-                <p>{{player.lineup_number}}</p>
-
-            </span>
-
-
-
-        </div> -->
-<!-- <div class='defensive-midfilders'>
-            <span>
-                mid
-            </span>
-            <span>
-                mid
-            </span>
-
-        </div>
-
-        <div class='midfilders'>
-
-
-            <span>
-                mid
-            </span>
-            <span>
-                mid
-            </span>
-            <span>
-                mid
-            </span>
-
-
-        </div> -->
-
-<!-- <div class='attacking-midfilders'>
-            <span>
-                at
-            </span>
-
-        </div> -->
-
-
-<!-- <div class='attackers'>
-
-            <span>
-                cf
-            </span>
-
-
-        </div>
-
+        <h4>
+            Coach: {{lineups.away.coach[0].lineup_player}}
+        </h4>
     </div>
 
-    <div class="away">
-
-        <div class='defender' *ngFor='let unit of lineups.away.lineup; let i = index'>
-            <span class='defender' *ngFor='let player of unit'>
-                <p>{{player.lineup_number}}</p>
-
-            </span>
-        </div>
 
 
-    </div>
-
-    <img src='../../../assets/pngguru.com.png'>
-
-
-</div> -->
+</div>
+<hr>
 
 
+<div class='warp'>
+    <app-tactic-board [home]='lineups.home.lineup' [away]='lineups.away.lineup'></app-tactic-board>
 
-
-
-
-
-
-<app-tactic-board [home]='lineups.home.lineup' [away]='lineups.away.lineup'></app-tactic-board>
-
-
+</div>
 
 
 
