--- a/src/app/match/mach-page/tactic-board/tactic-board.component.scss
+++ b/src/app/match/mach-page/tactic-board/tactic-board.component.scss
@@ -12,7 +12,7 @@ img{
 .home {
     position: absolute;
     width: 41%;
-    height: 61%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -22,7 +22,7 @@ img{
    display: inline-flex;
    
     width: 41%;
-    height: 61%;
+    height: 100%;
     position: absolute;
     margin-left:42%;
     flex-direction: row-reverse;
@@ -42,7 +42,7 @@ span {
     display: flex;
     width: 80px;
     height: 80px;
-    background-color: red;
+ 
     border-radius: 200px 200px 200px 200px;
     padding: 50%;
     text-align: center;
@@ -62,4 +62,32 @@ div {
     
     width: 40px;
 
+}
+
+span.awayTeam {
+    background-color: #EDAC07;
+      
+    display: flex;
+    width: 80px;
+    height: 80px;
+ 
+    border-radius: 200px 200px 200px 200px;
+    padding: 50%;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+span{
+    background-color: #50A0CA;
+      
+    display: flex;
+    width: 80px;
+    height: 80px;
+ 
+    border-radius: 200px 200px 200px 200px;
+    padding: 50%;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
 }
