--- a/src/app/match/mach-page/tactic-board/tactic-board.component.html
+++ b/src/app/match/mach-page/tactic-board/tactic-board.component.html
@@ -12,13 +12,12 @@
 
 
 
-
 </div>
 
 
 <img src='../../../assets/pngguru.com.png'>
 <div class="away">
-
+    <div class="subs"></div>
     <div *ngFor='let unit of away; let i = index'>
         <span class='awayTeam' *ngFor='let player of unit'>
             {{player.lineup_number}}
