--- a/src/app/match/mach-page/mach-page.component.scss
+++ b/src/app/match/mach-page/mach-page.component.scss
@@ -46,6 +46,7 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    text-align: center;
 }
 
 
@@ -78,4 +79,21 @@ span.away{
     
     justify-content: space-evenly;
     margin: auto;
+}
+
+.match_centre {
+    text-align: center;
+  
+   
+
+}
+
+.homeSide, .awaySide {
+    text-align: center;
+}
+.substititutes {
+   font-size: small;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
