some changes all good

--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -6,23 +6,7 @@
 
 
 <div class='large message'>
-    <h1>
-        Welcome
-    </h1>
-
-    <h2>
-        to
-    </h2>
-    <h1>
-        Premier league
-    </h1>
-    <h2>
-        statistics
-    </h2>
-    <h4>
-        app
-    </h4>
-
+    <img src="../../../assets/EPL-Logo.png">
 
 
 </div>
@@ -37,8 +21,6 @@
     <div class='route' [routerLink]="['/table']">
         table
     </div>
-    <div class='route'>
-        stats
-    </div>
+
 
 </div>
